-------------------------------------
	4.1-11
-------------------------------------
Fixed error causing the new VM wizard not to automatically assign
a new virtual hard disk.
http://code.google.com/p/phpvirtualbox/issues/detail?id=582

Changed default setting in WebAuth plugin to look for user in
REMOTE_USER $_SERVER variable.

-------------------------------------
	4.1-10	2012-09-08
-------------------------------------
Fixed JS error in some browsers causing the New Virtual Machine
Wizard to fail.

-------------------------------------
	4.1-9	2012-09-04
-------------------------------------
Made Hardware Virtualization options dependencies more apparent.
http://code.google.com/p/phpvirtualbox/issues/detail?id=574

Fixed bug in New Virtual Machine Wizard that would not allow
one to continue after creating a new hard disk.
http://code.google.com/p/phpvirtualbox/issues/detail?id=575

-------------------------------------
	4.1-8	2012-08-20
-------------------------------------
Fixed bug that would error out when creating a VM without a boot
disk.
http://code.google.com/p/phpvirtualbox/issues/detail?id=482

Fixed bug that would cause the progress bar to hang when
performing progress operations in some cases.
http://code.google.com/p/phpvirtualbox/issues/detail?id=495

Fixed "Next" arrow wizard code bug visible when the number of
wizard steps changes at run-time.

Fixed bug that would fail to generate a correct RDP connection
file when enforceVMOwnership is set.
http://code.google.com/p/phpvirtualbox/issues/detail?id=523

Fixed bug when creating HDD on drive letters under Windows.

Fixed Windows Bug when selecting folder from Hard Drive List

Added better support for IE9.

Added LDAP authentication module.

Cosmetic changes in init script output.

-------------------------------------
	4.1-7	2012-01-17
-------------------------------------
Fixed bug that would not properly set the Use host I/O cache
and Enable Page Fusion settings.

Added Windows 8 OS icons.
